listings/ch03-common-programming-concepts/no-listing-31-arms-must-return-same-type/output.txt
$ cargo run
   Compiling branches v0.1.0 (file:///projects/branches)
error[E0308]: if and else have incompatible types
 --> src/main.rs:7:9
  |
4 |       let number = if condition {
  |  __________________-
5 | |         5
  | |         - expected because of this
6 | |     } else {
7 | |         "six"
  | |         ^^^^^ expected integer, found &str
8 | |     };
  | |_____- if and else have incompatible types
  |
  = note: expected type `{integer}`
             found type `&str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
error: Could not compile `branches`.

To learn more, run the command again with --verbose.
